sass/index.scss
@import "colors";

#article {
    background-color: #fff;
}

.observed_works {
    max-width: 820px;
    font-size: 0;
    text-align: center;
    margin: auto;

    .item {
        $spacer: 20px;
        display: inline-block;

        width: 100%;
        &:nth-child(n+2) {
            margin-top: $spacer;
        }
        @media (min-width: 576px) {
            width: calc((100% - #{$spacer} * 2)/3);
            &:nth-child(3n+2), &:nth-child(3n+3) {
                margin-left: $spacer;
            }
            &:nth-child(n+4) {
                margin-top: $spacer;
            }
        }

        img {
            width: 100%;
            margin: 15px 0;
        }

        h2 {
            font-size: 14pt;
            font-weight: 700;
        }

        a {
          display: block;
          transition: transform .3s ease-out;//cubic-bezier(0.43, 2.99, 0.46, -0.81);
          &:first-child:hover {
            transform: scale(1.05);// rotate(3deg);
          }

          &:hover,
          &:active,
          &:visited {
              h2 {
                  color: #000!important;
              }
          }
          &.comingsoon {
            position: relative;
            &::before {
              content: '近期活動...';
              position: absolute;
              bottom: 0;
              right: 0;
              left: 0;

              display: block;
              width: 100%;
              height: auto;

              color: #fff;
              font-size: 12pt;
              text-align: center;
              line-height: 24pt;
              background-color: rgba(0, 0, 0, .6);
            }
          }
        }

        time {
            font-size: 12pt;
        }
    }
}

